--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ allprojects {
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
         maven {
-            url "https://jitpack.io"
+            url "https://oss.sonatype.org/content/repositories/snapshots"
         }
     }
 }
