--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,19 +43,26 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //tinydancer - FPS
     debugImplementation "com.github.brianPlummer:tinydancer:0.1.2"
     releaseImplementation "com.github.brianPlummer:tinydancer-noop:0.1.2"
     testImplementation "com.github.brianPlummer:tinydancer-noop:0.1.2"
+
+    //volley - API Calls
     implementation 'com.android.volley:volley:1.2.1'
+
+    //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
-    def room_version = "2.4.0"
 
+    //room - localdb
+    def room_version = "2.4.0"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
 
-    //retrofit and gson
+    //retrofit and gson - API Calls
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -64,9 +71,4 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
 
-    //picasso
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-
-    //drawable gif
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
 }
